--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <div class="lg:col-span-7">
             <p class="text-2sm font-semibold tracking-wide text-slate-500">Senior Software Developer</p>
             <h1 class="mt-3 text-4xl font-bold tracking-tight text-slate-900 sm:text-5xl">Abhishake Gupta</h1>
-            <p class="mt-3 text-lg font-semibold text-navy-900">Python · Microservices · REST APIs · Backend Systems</p>
+            <p class="mt-3 text-lg font-semibold text-navy-900">Python · REST APIs · Docker · Aspiring Quant · Algo Trading · Low-Latency Systems</p>
             <p class="mt-4 max-w-2xl text-lg leading-relaxed text-slate-600">
               Highly experienced Senior Software Developer with over a decade of expertise in the complete SDLC, specializing in building scalable backend systems, microservices, and robust REST APIs. Proficient in Python, Flask, FastAPI with hands-on experience in modern architectures, containerization (Docker/Kubernetes), and NoSQL/SQL databases.
             </p>
@@ -118,7 +118,7 @@
             <dl class="mt-10 grid grid-cols-2 gap-6 sm:max-w-md">
               <div class="rounded-2xl border border-slate-200 bg-white p-4 shadow-sm">
                 <dt class="text-xs font-semibold text-slate-500">Experience</dt>
-                <dd class="mt-1 text-2xl font-bold text-slate-900"><span id="experience-years">11</span> years</dd>
+                <dd class="mt-1 text-2xl font-bold text-slate-900"><span id="experience-years">12+</span> Y <span id="experience-months">0</span> M</dd>
               </div>
               <div class="rounded-2xl border border-slate-200 bg-white p-4 shadow-sm">
                 <dt class="text-xs font-semibold text-slate-500">Location</dt>
@@ -654,7 +654,9 @@
     let years = now.getFullYear() - startDate.getFullYear();
     let months = now.getMonth() - startDate.getMonth();
     if (months < 0) { years--; months += 12; }
-    document.getElementById('experience-years').textContent = years + (months > 0 ? '+' : '');
+    document.getElementById('experience-years').textContent = years;
+    const monthsEl = document.getElementById('experience-months');
+    if (monthsEl) monthsEl.textContent = months;
 
     // Reveal email on button click
     const emailBtn = document.getElementById('emailBtn');
@@ -666,5 +668,7 @@
     }
   </script>
 
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.svg" type="image/svg+xml">
 </body>
 </html>
