--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <li><a class="hover:text-white transition" href="#experience">Experience</a></li>
             <li><a class="hover:text-white transition" href="#skills">Skills</a></li>
             <li><a class="hover:text-white transition" href="#education">Education</a></li>
+            <li><a class="hover:text-white transition" href="#certifications">Certifications</a></li>
             <li><a class="hover:text-white transition" href="#projects">Projects</a></li>
             <li><a class="hover:text-white transition" href="#posts">Posts</a></li>
           </ul>
@@ -83,6 +84,7 @@
             <li><a class="block rounded-xl px-3 py-2 hover:bg-white/10" href="#experience">Experience</a></li>
             <li><a class="block rounded-xl px-3 py-2 hover:bg-white/10" href="#skills">Skills</a></li>
             <li><a class="block rounded-xl px-3 py-2 hover:bg-white/10" href="#education">Education</a></li>
+            <li><a class="block rounded-xl px-3 py-2 hover:bg-white/10" href="#certifications">Certifications</a></li>
             <li><a class="block rounded-xl px-3 py-2 hover:bg-white/10" href="#projects">Projects</a></li>
             <li><a class="block rounded-xl px-3 py-2 hover:bg-white/10" href="#posts">Posts</a></li>
           </ul>
@@ -393,45 +395,135 @@
     <!-- Education -->
     <section id="education" class="bg-white">
       <div class="mx-auto max-w-screen-2xl px-4 py-16 sm:px-6">
-        <h2 class="text-2xl font-bold tracking-tight text-slate-900 sm:text-3xl">Education & Certifications</h2>
-        <p class="mt-2 max-w-3xl text-slate-600">Formal education and professional certifications.</p>
+        <h2 class="text-2xl font-bold tracking-tight text-slate-900 sm:text-3xl">Education</h2>
+        <p class="mt-2 max-w-3xl text-slate-600">Formal education background.</p>
 
-        <div class="mt-8 grid gap-6 lg:grid-cols-2">
-          <!-- Education Column -->
-          <div class="space-y-6">
-            <article class="rounded-2xl border border-slate-200 bg-white p-6 shadow-sm">
-              <h3 class="text-2lg font-semibold text-slate-900">B.Tech in Electronics & Communication (ECE)</h3>
-              <p class="mt-1 text-2sm text-slate-600">BPIT, Rohini (GGSIPU), Delhi</p>
-              <p class="mt-2 text-2sm font-semibold text-accent">2013 | 76%</p>
-            </article>
+        <div class="mt-8 grid gap-6 md:grid-cols-3">
+          <article class="rounded-2xl border border-slate-200 bg-white p-6 shadow-sm">
+            <h3 class="text-2lg font-semibold text-slate-900">B.Tech in Electronics & Communication</h3>
+            <p class="mt-1 text-2sm text-slate-600">BPIT, Rohini (GGSIPU), Delhi</p>
+            <p class="mt-2 text-2sm font-semibold text-accent">2013 | 76%</p>
+          </article>
 
-            <article class="rounded-2xl border border-slate-200 bg-white p-6 shadow-sm">
-              <h3 class="text-2lg font-semibold text-slate-900">Senior Secondary (XII)</h3>
-              <p class="mt-1 text-2sm text-slate-600">Bal Bharti Public School, CBSE, Delhi</p>
-              <p class="mt-2 text-2sm font-semibold text-accent">2009 | 80%</p>
-            </article>
+          <article class="rounded-2xl border border-slate-200 bg-white p-6 shadow-sm">
+            <h3 class="text-2lg font-semibold text-slate-900">Senior Secondary (XII)</h3>
+            <p class="mt-1 text-2sm text-slate-600">Bal Bharti Public School, CBSE, Delhi</p>
+            <p class="mt-2 text-2sm font-semibold text-accent">2009 | 80%</p>
+          </article>
 
-            <article class="rounded-2xl border border-slate-200 bg-white p-6 shadow-sm">
-              <h3 class="text-2lg font-semibold text-slate-900">Higher Secondary (X)</h3>
-              <p class="mt-1 text-2sm text-slate-600">J.M. Senior Secondary School, CBSE, Delhi</p>
-              <p class="mt-2 text-2sm font-semibold text-accent">2007 | 87%</p>
-            </article>
+          <article class="rounded-2xl border border-slate-200 bg-white p-6 shadow-sm">
+            <h3 class="text-2lg font-semibold text-slate-900">Higher Secondary (X)</h3>
+            <p class="mt-1 text-2sm text-slate-600">J.M. Senior Secondary School, CBSE, Delhi</p>
+            <p class="mt-2 text-2sm font-semibold text-accent">2007 | 87%</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- Certifications -->
+    <section id="certifications" class="bg-slate-50">
+      <div class="mx-auto max-w-screen-2xl px-4 py-16 sm:px-6">
+        <h2 class="text-2xl font-bold tracking-tight text-slate-900 sm:text-3xl">Certifications & Courses</h2>
+        <p class="mt-2 max-w-3xl text-slate-600">Professional certifications and continuous learning.</p>
+
+        <div class="mt-8 grid gap-6 md:grid-cols-2 lg:grid-cols-3">
+          <!-- Trading & Quant -->
+          <div class="rounded-2xl border border-slate-200 bg-white p-6 shadow-sm">
+            <h3 class="text-lg font-semibold text-slate-900">Trading & Quant</h3>
+            <ul class="mt-4 space-y-3 text-2sm text-slate-600">
+              <li class="flex items-start gap-2">
+                <span class="mt-1 h-1.5 w-1.5 flex-shrink-0 rounded-full bg-accent"></span>
+                <span>Stock Trading Strategies, Technical Analysis (Dec 2022)</span>
+              </li>
+              <li class="flex items-start gap-2">
+                <span class="mt-1 h-1.5 w-1.5 flex-shrink-0 rounded-full bg-accent"></span>
+                <a href="https://udemy-certificate.s3.amazonaws.com/pdf/UC-fac918c3-ebf1-4cc0-a309-dbf1046468a4.pdf" target="_blank" rel="noopener" class="underline hover:text-slate-900">Advanced Interactive Brokers API</a>
+              </li>
+              <li class="flex items-start gap-2">
+                <span class="mt-1 h-1.5 w-1.5 flex-shrink-0 rounded-full bg-accent"></span>
+                <a href="https://udemy-certificate.s3.amazonaws.com/pdf/UC-6bd023a2-0d58-483f-a2dc-c54c3708494b.pdf" target="_blank" rel="noopener" class="underline hover:text-slate-900">Advanced Options Concepts - Probability, Greeks, Simulation</a>
+              </li>
+              <li class="flex items-start gap-2">
+                <span class="mt-1 h-1.5 w-1.5 flex-shrink-0 rounded-full bg-accent"></span>
+                <a href="https://udemy-certificate.s3.amazonaws.com/pdf/UC-2a5ac93e-a899-4452-a16b-9d611d1fe750.pdf" target="_blank" rel="noopener" class="underline hover:text-slate-900">Stock Market Factor Investing Quantitative Trading</a>
+              </li>
+            </ul>
           </div>
 
-          <!-- Certifications Column -->
-          <article class="rounded-2xl border border-slate-200 bg-white p-6 shadow-sm">
-            <h3 class="text-2lg font-semibold text-slate-900">Certifications & Affiliations</h3>
-            <ul class="mt-3 space-y-2 text-2sm leading-relaxed text-slate-600">
-              <li><span class="font-medium text-slate-900">Trading:</span> Stock Trading Strategies, Technical Analysis (Dec 2022)</li>
-              <li><span class="font-medium text-slate-900">Trading:</span> Advanced Interactive Brokers API, Udemy (Oct 2022)</li>
-              <li><span class="font-medium text-slate-900">Kubernetes:</span> Introduction to Kubernetes, Linux Academy (Aug 2021)</li>
-              <li><span class="font-medium text-slate-900">Git:</span> Git Version Control, Udemy (May 2018)</li>
-              <li><span class="font-medium text-slate-900">Python:</span> Python Certification, Infosys (Mar 2015)</li>
-              <li><span class="font-medium text-slate-900">Systems:</span> Open Sources & Systems Training, Infosys (May 2014)</li>
-              <li><span class="font-medium text-slate-900">Verilog:</span> Verilog Training, Electronics for You (Jun 2012)</li>
-              <li><span class="font-medium text-slate-900">MATLAB:</span> MATLAB Training, DRDO (Jun 2011)</li>
+          <!-- Backend & APIs -->
+          <div class="rounded-2xl border border-slate-200 bg-white p-6 shadow-sm">
+            <h3 class="text-lg font-semibold text-slate-900">Backend & APIs</h3>
+            <ul class="mt-4 space-y-3 text-2sm text-slate-600">
+              <li class="flex items-start gap-2">
+                <span class="mt-1 h-1.5 w-1.5 flex-shrink-0 rounded-full bg-accent"></span>
+                <a href="https://www.udemy.com/certificate/UC-7422906a-4537-492e-a7e2-7a4e18630d92/" target="_blank" rel="noopener" class="underline hover:text-slate-900">The Complete FastAPI Course With OAuth & JWT Authentication</a>
+              </li>
+              <li class="flex items-start gap-2">
+                <span class="mt-1 h-1.5 w-1.5 flex-shrink-0 rounded-full bg-accent"></span>
+                <span>Python Certification, Infosys (Mar 2015)</span>
+              </li>
             </ul>
-          </article>
+          </div>
+
+          <!-- DevOps & Cloud -->
+          <div class="rounded-2xl border border-slate-200 bg-white p-6 shadow-sm">
+            <h3 class="text-lg font-semibold text-slate-900">DevOps & Cloud</h3>
+            <ul class="mt-4 space-y-3 text-2sm text-slate-600">
+              <li class="flex items-start gap-2">
+                <span class="mt-1 h-1.5 w-1.5 flex-shrink-0 rounded-full bg-accent"></span>
+                <span>Introduction to Kubernetes, Linux Academy (Aug 2021)</span>
+              </li>
+              <li class="flex items-start gap-2">
+                <span class="mt-1 h-1.5 w-1.5 flex-shrink-0 rounded-full bg-accent"></span>
+                <a href="https://www.linkedin.com/learning/certificates/02c6a173aac4ca0e640bba548bbcba19a9fb94b8a1e820a5741f4fd4d025dd16?trk=backfilled_certificate" target="_blank" rel="noopener" class="underline hover:text-slate-900">Learning Docker (2018)</a>
+              </li>
+              <li class="flex items-start gap-2">
+                <span class="mt-1 h-1.5 w-1.5 flex-shrink-0 rounded-full bg-accent"></span>
+                <a href="https://udemy-certificate.s3.amazonaws.com/pdf/UC-AQG9LI0F.pdf" target="_blank" rel="noopener" class="underline hover:text-slate-900">Git Version Control, Udemy (May 2018)</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- Product & Business -->
+          <div class="rounded-2xl border border-slate-200 bg-white p-6 shadow-sm">
+            <h3 class="text-lg font-semibold text-slate-900">Product & Business</h3>
+            <ul class="mt-4 space-y-3 text-2sm text-slate-600">
+              <li class="flex items-start gap-2">
+                <span class="mt-1 h-1.5 w-1.5 flex-shrink-0 rounded-full bg-accent"></span>
+                <a href="https://www.udemy.com/share/101rJe3@aVpzU8MUKNm-7Myfoox_fAXjVIOO9Gx_lBcqptd2GrjirFxxirzu0puiee4F7AFl/" target="_blank" rel="noopener" class="underline hover:text-slate-900">Become a Product Manager</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- Web3 & Blockchain -->
+          <div class="rounded-2xl border border-slate-200 bg-white p-6 shadow-sm">
+            <h3 class="text-lg font-semibold text-slate-900">Web3 & Blockchain</h3>
+            <ul class="mt-4 space-y-3 text-2sm text-slate-600">
+              <li class="flex items-start gap-2">
+                <span class="mt-1 h-1.5 w-1.5 flex-shrink-0 rounded-full bg-accent"></span>
+                <a href="https://www.coursera.org/account/accomplishments/verify/YQB6JX77XBDB" target="_blank" rel="noopener" class="underline hover:text-slate-900">Web3 and Blockchain Fundamentals</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- Foundational -->
+          <div class="rounded-2xl border border-slate-200 bg-white p-6 shadow-sm">
+            <h3 class="text-lg font-semibold text-slate-900">Foundational</h3>
+            <ul class="mt-4 space-y-3 text-2sm text-slate-600">
+              <li class="flex items-start gap-2">
+                <span class="mt-1 h-1.5 w-1.5 flex-shrink-0 rounded-full bg-accent"></span>
+                <span>Open Sources & Systems Training, Infosys (May 2014)</span>
+              </li>
+              <li class="flex items-start gap-2">
+                <span class="mt-1 h-1.5 w-1.5 flex-shrink-0 rounded-full bg-accent"></span>
+                <span>Verilog Training, Electronics for You (Jun 2012)</span>
+              </li>
+              <li class="flex items-start gap-2">
+                <span class="mt-1 h-1.5 w-1.5 flex-shrink-0 rounded-full bg-accent"></span>
+                <span>MATLAB Training, DRDO (Jun 2011)</span>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
