Do cosmetic changes for Domain in which I have worked on

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
               <p class="text-2sm font-semibold text-accent">Jul 2023 — Present</p>
             </div>
             <ul class="mt-4 list-disc space-y-2 pl-5 text-2sm leading-relaxed text-slate-600">
-              <li>Led multi-provider delivery orchestration (DoorDash, Uber Direct, Relay) with unified abstraction layer for quoting, dispatching, and tracking.</li>
+              <li>Led multi-provider delivery orchestration (Third party delivery providers) with unified abstraction layer for quoting, dispatching, and tracking.</li>
               <li>Migrated menu system to new architecture with Redis caching, reducing load times from 40 minutes to seconds.</li>
               <li>Designed real-time failover mechanism for automatic rerouting to backup providers, reducing order cancellations.</li>
               <li>Re-engineered Celery background tasks from monolithic to chunk-based architecture with connection pooling.</li>
@@ -395,8 +395,7 @@
     <!-- Education -->
     <section id="education" class="bg-white">
       <div class="mx-auto max-w-screen-2xl px-4 py-16 sm:px-6">
-        <h2 class="text-2xl font-bold tracking-tight text-slate-900 sm:text-3xl">Education</h2>
-        <p class="mt-2 max-w-3xl text-slate-600">Formal education background.</p>
+        <h2 class="text-2xl font-bold tracking-tight text-slate-900 sm:text-3xl">Education</h2>        
 
         <div class="mt-8 grid gap-6 md:grid-cols-3">
           <article class="rounded-2xl border border-slate-200 bg-white p-6 shadow-sm">
@@ -533,8 +532,7 @@
       <div class="mx-auto max-w-screen-2xl px-4 py-16 sm:px-6">
         <div class="flex flex-col gap-4 sm:flex-row sm:items-end sm:justify-between">
           <div>
-            <h2 class="text-2xl font-bold tracking-tight text-slate-900 sm:text-3xl">Sectors & Domains</h2>
-            <p class="mt-2 max-w-3xl text-slate-600">What I’ve worked on: domains, problems solved, and my responsibilities.</p>
+            <h2 class="text-2xl font-bold tracking-tight text-slate-900 sm:text-3xl">Sectors & Domains</h2>            
           </div>
           <a href="#contact" class="hidden sm:inline-flex items-center justify-center rounded-xl border border-slate-200 bg-white px-4 py-2 text-2sm font-semibold text-slate-900 shadow-sm transition hover:bg-slate-50">Let’s collaborate</a>
         </div>
