--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
             <div class="mt-8 flex flex-col gap-3 sm:flex-row sm:items-center">
               <a href="#contact" class="inline-flex items-center justify-center rounded-2xl bg-accent px-6 py-3 text-2sm font-semibold text-slate-900 shadow transition hover:brightness-95">Contact Me</a>
-              <a href="/assests/CV%20Abhishake%20Gupta%202026.pdf" download="Abhishake-Gupta-2026-CV.pdf" class="inline-flex items-center justify-center rounded-2xl border border-slate-200 bg-white px-6 py-3 text-2sm font-semibold text-slate-900 shadow-sm transition hover:bg-slate-50">Download CV</a>
+              <a href="/assests/CV%20Abhishake%20Gupta-2026.pdf" download="Abhishake-Gupta-2026-CV.pdf" class="inline-flex items-center justify-center rounded-2xl border border-slate-200 bg-white px-6 py-3 text-2sm font-semibold text-slate-900 shadow-sm transition hover:bg-slate-50">Download CV</a>
             </div>
 
             <dl class="mt-10 grid grid-cols-2 gap-6 sm:max-w-md">
